<resources>
    <string name="app_name">AndroidSandBox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="debug_button_test">Test button</string>
    <string name="debug_button_snackbar">Snackbar button</string>
    <string name="title_activity_debug">Debug</string>
    <string name="settings_title">Settings</string>
    <string name="settings_switch1">Switch1</string>
    <string name="settings_switch2">Switch2</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="settings_on">Setting ON</string>
    <string name="settings_off">Setting OFF</string>
</resources>
