<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/files_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/debugTitle"
        android:text="@string/hello_world"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_button_test"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_button_snackbar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

